@@ -1,3 +1,10 @@
+2012-04-23  Christophe Rhodes  <csr21@cantab.net>
+
+	* slime.el (slime-operator-before-point-function): new variable.
+	(slime-operator-before-point): use it.
+	(slime-lisp-operator-before-point): default implementation for
+	slime-operator-before-point-function (unchanged from before).
+
 2012-04-20  Nikodemus Siivola  <nikodemus@random-state.net>
 
 	* swank-sbcl.lisp (stream-force-output :around): Workaroud for
